2005-07-30 Baptiste Lepilleur <gaiacrtn@free.fr>
  * include/cppunit/config/SourcePrefix.h: added, prefix added at begining of sources
    to remove warning. Removed most warning when compiling with VC++ 6sp6.

2005-07-30 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/config/config-msvc6.h: auto-detect if RTTI are enabled 
    the _CPPRTTI macro (defined by the compiler when enabling RTTI).

  * include/cppunit/config/config-msvc6.h: added missing macro definition
    CPPUNIT_HAVE_CPP_CAST.
  
  * src/cppunit/TestResultCollector.cpp: fixed memory leak in destructor.

2005-07-15 Baptiste Lepilleur <gaiacrtn@free.fr>

  * config/bb_enable_doxygen.m4: Rolled back Brad Hards patch as it break
    generation of doc/Makefile.am.

  * cppunit.spec.in: Applied patch #1232555 from Patrice Dumas. This file is
    use for RPM packaging.

  * development snapshot release 1.11.0.

2005-07-09 Baptiste Lepilleur <gaiacrtn@free.fr>

  * doc/Money.dox:
  * include/cppunit/TestSuite.h: 
  * include/cppunit/XmlOutputterHook.h: applied Brad Hards patch 
    that correct miscellaneous doc generation issues (unescaped <>, \...).

  * include/cppunit/plugin/TestPlugIn.h:
  * include/cppunit/CompilerOutputter.h:
  * doc/CppUnit-win.dox: removed a few documentation generation warnings.

  * config/bb_enable_doxygen.m4: applied Brad Hards patch to remove warning
    when running ./autogen.sh or aclocal.

  * doc/money.dox: fixed bad usage of CPPUNIT_ASSERT_EQUALS.

2005-07-05 Baptiste Lepilleur <gaiacrtn@free.fr>

  * Examples/simple/Makefile.am: do not install 'simple' programm 
    (patch #1230784).

2005-07-05 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/TestResultCollector.h
  * src/cppunit/TestResultCollector.cpp: fixed memory leak 
    occuring when calling reset().

  * src/cppunit/DllMain.cpp: added work-around for mingw compilation
    for BLENDFUNCTION macro issue when including windows.h.
